--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -6,14 +6,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Montserrat:wght@400;700&family=Raleway:wght@400;700&display=swap');
 
 body {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Comfortaa';
+    font-family: 'Comfortaa', Verdana, Geneva, Tahoma, sans-serif;
     margin: 1rem 0;
 }
 
-.specialFont {
-    font-family: 'Raleway';
+.special-font {
+    font-family: 'Raleway', Verdana, Geneva, Tahoma, sans-serif;
 }
