--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,39 +1,23 @@
-/**
- * Use this file to import partials.
- * Do not include SCSS code in this file.
- */
+/* Use this file to import partials.      */
+/* Do not include SCSS code in this file. */
 
-/*
- * Import fonts
- */
+/* Import fonts */
 @import "_fonts";
 
-/**
- * Import variables
- */
+/* Import variables */
 @import "variables";
 
-/**
- * Import box model for columns
- */
+/* Import box model for columns */
 @import "_boxes";
 
-/**
- * Import npm dependencies
- * see: https://v2.parceljs.org/features/module-resolution/
- * see commented examples below
- */
+// Import npm dependencies
+// see: https://v2.parceljs.org/features/module-resolution/
+// see commented examples below 
 
 // @import "some-node-module";
 // @import "@some-company/some-node-module";
 
-/**
- * Import layouts
- * It's a best practice to use a different partial for each page
- */
-
+/* Import layouts */
 @import "layouts/home";
 
-/**
- * Do NOT include anything else in this file!
- */
+/* Do NOT include anything else in this file! */
