--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -27,7 +27,7 @@ h2::after {
   display: block;
 }
 
-header, #content, footer {
+header, #content {
   display: flex;
   max-width: 1200px;
   position: relative;
@@ -120,10 +120,12 @@ header {
 
 /* Contenido de la página */
 #content {
+  transition: $basic-transition;
 
   .left {
     position: relative;
     top: -50px;
+    transition: $basic-transition;
 
     .formacion {
       background-color: $primary-grey-bg;
@@ -189,6 +191,7 @@ header {
   .right {
     position: relative;
     top: 50px;
+    transition: $basic-transition;
 
     .experiencia {
       .experiencia__elem {
@@ -202,6 +205,171 @@ header {
           margin-bottom: 1rem;
         }
       }
+    }
+  }
+}
+
+.sticky + #content {
+  padding-top: 14rem;
+
+  .left {
+    top: 0;
+  }
+
+  .right {
+    top: 0;
+  }
+}
+
+footer {
+  display: block;
+  margin: 2rem auto 0 auto;
+  background-color: $primary-grey-bg;
+  border-left: 2rem solid $secondary-grey-bg;
+  padding: 0.1rem 0rem;
+  box-sizing: border-box;
+
+  .footer__elem{
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 1112px) {
+  #presentacion {
+    width: 100%;
+  }
+
+  #personal {
+    width: 240px;
+
+    .svg-inline--fa {
+      display: none;
+    }
+  }
+
+  #content .left .habilidades .habilidades__elem ul li {
+    width: 10%;
+    padding-bottom: 10%;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #content .left .habilidades .habilidades__elem {
+    flex-wrap: wrap;
+
+    span {
+      width: 100%;
+      padding-bottom: 0.5rem;
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #header {
+    flex-wrap: wrap;
+
+    #presentacion {
+      margin-top: 1rem;
+    }
+
+    #personal {
+      display: flex;
+      width: 100%;
+  
+      img {
+        width: 240px;
+      } 
+  
+      ul {
+        width: 100%;
+        padding-left: 1rem;
+
+        .svg-inline--fa {
+          display: inline;
+        }
+      }
+    }
+  }
+
+  /* Anulamos el comportamiento sticky */
+  .sticky {
+    position: relative;
+    width: 100%;
+    top: 0;
+    z-index: 1;
+    background-color: $primary-bg;
+  
+    #presentacion {
+      margin-top: 1rem;
+    }
+  
+    h1 {
+      font-size: 3.5rem;
+    }
+  
+    .header--mod {
+      font-size: 1.4rem;
+    }
+    p {
+      font-size: 1rem;
+    }
+  
+    #personal {
+      padding: 2rem;
+  
+      img {
+        width: 240px;
+        margin-bottom: 0;
+      }
+  
+      ul {
+        display: block;
+      }
+    }
+  }
+
+  .sticky + #content {
+    padding-top: 1rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .sticky + #content {
+    padding-top: 0rem;
+  }
+
+  #content {
+    flex-wrap: wrap;
+
+    .col {
+      padding: 0;
+    }
+
+    .col-5, 
+    .col-7 {
+      width: 100%;
+    }
+
+    .experiencia {
+      padding: 2rem;
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #header #personal {
+    flex-wrap: wrap;
+
+    img {
+      width: 260px;
+      margin: 0 auto;
+    }
+
+    ul {
+      width: 260px;
+      margin: 1rem auto 0 auto;
     }
   }
 }
