--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -1,4 +1,5 @@
 /**
+ * Definición de las fuentes del portal.
  * Comfortaa: Encabezados principales.
  * Raleway: Encabezados de secciones.
  * Montserrat: Textos en general.
